--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.scss
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.scss
@@ -7,13 +7,17 @@
 
 .base-query {	
   width: 100%;
-  border: solid 1px #ccc;
+  border: solid 1px #ccc !important;
   min-height: 60px;
   background: white;
   border-radius: 4px;
   overflow: hidden;
   display: flex;
   cursor: default !important;
+}
+
+.string-operator {
+	max-width: 150px;	
 }
 
 .query-container {
@@ -63,10 +67,14 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
+.query-item:last-child {
   border: none;
 }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+.query-list.cdk-drop-list-dragging .query-item:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+::ng-deep .mat-mdc-form-field-bottom-align::before {
+	display: unset;
 }
