feat: next step

--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -19,6 +19,16 @@
       						</mat-option>
     					</mat-autocomplete> 
 				</mat-form-field>
+				<mat-form-field class="number-operator"> 
+				   <mat-label>Operator</mat-label> 
+				   <mat-select [formControlName]="FormFields.NumberOperator" name="NumberOperator">
+				      <mat-option *ngFor="let item of numberQueryItems" [value]="item">{{item}} </mat-option> 
+				   </mat-select>
+				</mat-form-field>
+				<mat-form-field class="formfield"> 
+				   <input matInput type="text" formControlName="{{FormFields.NumberValue}}" class="number-value"
+							 tabindex="3">
+				</mat-form-field>
 			</div>
 		</form>
 	</div>
