--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div>
-		<h2 i18n="@@createQuerySymbolQuery">Symbol Query</h2>
+		<h2 i18n="@@query">Query</h2>
 		<form [formGroup]="queryForm" novalidate>
 			<div class="query-item base-query">
 			<div>
