--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -47,8 +47,7 @@
 	</div>
 	<div cdkDropListGroup>
 		<div class="query-container">
-			<h2 i18n="@@createQueryAvailableQueryItems">Available Query
-				Items</h2>
+			<h2 i18n="@@createQueryAvailableQueryItems">Available Query	Items</h2>
 
 			<div cdkDropList [cdkDropListData]="availableItems"
 				class="query-list" (cdkDropListDropped)="drop($event)">
