--- a/frontend/src/angular/src/app/financial-data/components/query/query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/query/query.component.html
@@ -1,5 +1,8 @@
 <div class="query-item base-query">
-    <div *ngIf="queryItemType === ItemType.Query">
+    <div *ngIf="queryItemType === ItemType.Query && showType">
+    	<div i18n="@@query">Query</div>
+    </div>
+    <div *ngIf="queryItemType === ItemType.Query && !showType">
 				<mat-form-field class="term-operator"> 
 				   <mat-label i18n="@@operator">Operator</mat-label> 
 				   <mat-select [formControlName]="FormFields.TermOperator" name="TermOperator" class="operator">
@@ -7,7 +10,7 @@
 				   </mat-select>
 				</mat-form-field>
 			</div>
-			<div *ngIf="queryItemType === ItemType.Query">
+			<div *ngIf="queryItemType === ItemType.Query && !showType">
 				<mat-form-field class="string-operator"> 
 				   <mat-label i18n="@@operator">Operator</mat-label> 
 				   <mat-select [formControlName]="FormFields.ConceptOperator" name="ConceptOperator" class="operator">
@@ -26,7 +29,7 @@
     					</mat-autocomplete> 
 				</mat-form-field>
 				</div>
-				<div *ngIf="queryItemType === ItemType.Query">
+				<div *ngIf="queryItemType === ItemType.Query && !showType">
 				<mat-form-field class="number-operator"> 
 				   <mat-label i18n="@@operator">Operator</mat-label> 
 				   <mat-select [formControlName]="FormFields.NumberOperator" name="NumberOperator" class="operator">
@@ -39,7 +42,7 @@
 				</mat-form-field>
 				</div>
 				
-			<div *ngIf="queryItemType === ItemType.TermStart">
+			<div *ngIf="queryItemType === ItemType.TermStart && !showType">
 				<mat-form-field class="term-operator"> 
 				   <mat-label i18n="@@operator">Operator</mat-label> 
 				   <mat-select [formControlName]="FormFields.TermOperator" name="TermOperator" class="operator">
@@ -51,7 +54,7 @@
 				<div i18n=@@queryTermStart>Term Start</div>
 			</div>
 			
-			<div *ngIf="queryItemType === ItemType.TermEnd">
+			<div *ngIf="queryItemType === ItemType.TermEnd && !showType">
 				<mat-form-field class="term-operator"> 
 				   <mat-label i18n="@@operator">Operator</mat-label> 
 				   <mat-select [formControlName]="FormFields.TermOperator" name="TermOperator" class="operator">
