feat: next step

--- a/frontend/src/angular/src/app/financial-data/components/query/query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/query/query.component.html
@@ -63,6 +63,6 @@
 				</mat-form-field>
 			</div>
 			<div *ngIf="queryItemType === ItemType.TermEnd">
-				<div i18n=@@queryTermStart>Term Start</div>
+				<div i18n=@@queryTermEnd>Term End</div>
 			</div>
 </div>
