fix: drag and drop

--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.scss
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.scss
@@ -58,18 +58,9 @@
   display: block;
 }
 
-.query-item {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
+.query-item { 
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  cursor: move;
-  background: white;
-  font-size: 14px;
+  flex: 1 0 auto;
 }
 
 .cdk-drag-preview {
