--- a/frontend/src/angular/src/app/financial-data/components/query/query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/query/query.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="itemFormGroup" novalidate>
+<form [formGroup]="itemFormGroup" novalidate class="myform">
 <div class="query-item base-query">
     <div *ngIf="queryItemType === ItemType.Query && showType">
     	<div i18n="@@query">Query</div>
