--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -63,7 +63,7 @@
 
 			<div cdkDropList [cdkDropListData]="queryItems" class="query-list"
 				(cdkDropListDropped)="drop($event)">
-				<app-query *ngFor="let item of queryItems; let i = index" cdkDrag [queryItemType]="item.queryItemType" 
+				<app-query class="query-item" *ngFor="let item of queryItems; let i = index" cdkDrag [queryItemType]="item.queryItemType" 
 				   [baseFormArray]="queryItemParams.formArray" [formArrayIndex]="i" 
 				   [showType]="queryItemParams.showType" ></app-query>
 				<!-- <div class="query-item" *ngFor="let item of queryItems; let i = index" cdkDrag>{{item.title}}</div> -->
