--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -2,47 +2,36 @@
 		<form [formGroup]="queryForm" novalidate>
 	<div>
 		<h2 i18n="@@query">Query</h2>
-			<div class="query-item base-query">
-			<div>
-				<mat-form-field class="term-operator"> 
+			<div class="symbol-financials-container">
+				<mat-form-field> 
 				   <mat-label i18n="@@operator">Operator</mat-label> 
-				   <mat-select [formControlName]="FormFields.TermOperator" name="TermOperator" class="operator">
-				      <mat-option *ngFor="let item of termQueryItems" [value]="item" class="operator">{{item}}</mat-option> 
-				   </mat-select>
-				</mat-form-field>
-			</div>
-			<div>
-				<mat-form-field class="string-operator"> 
-				   <mat-label i18n="@@operator">Operator</mat-label> 
-				   <mat-select [formControlName]="FormFields.ConceptOperator" name="ConceptOperator" class="operator">
-				      <mat-option *ngFor="let item of stringQueryItems" [value]="item" class="operator">{{item}}</mat-option> 
+				   <mat-select [formControlName]="FormFields.YearOperator" name="YearOperator">
+				      <mat-option *ngFor="let item of numberQueryItems" [value]="item">{{item}}</mat-option> 
 				   </mat-select>
 				</mat-form-field>
 				<mat-form-field class="form-field">
-				<mat-label i18n="@@createQueryQueryItemConcept">Concept</mat-label> 
-						<input matInput type="text" [matAutocomplete]="autoConcept" formControlName="{{FormFields.Concept}}"
-							i18n-placeholder placeholder="concept">
-						<mat-autocomplete #autoConcept="matAutocomplete" autoActiveFirstOption (optionSelected)="conceptSelected($event)">
-      						<mat-option *ngFor="let concept of concepts" [value]="concept" 
-      						    class="symbol-text">
-        						{{ concept }}
+				<mat-label i18n="@@year">Year</mat-label>  
+				   <input matInput type="text" formControlName="{{FormFields.Year}}">
+				</mat-form-field>
+			</div>
+			<div class="symbol-financials-container">
+				<mat-form-field class="form-field">
+				<mat-label i18n="@@symbol">Symbol</mat-label> 
+						<input matInput type="text" [matAutocomplete]="autoSymbol" formControlName="{{FormFields.Symbol}}"
+							i18n-placeholder="@@phSymbol" placeholder="symbol">
+						<mat-autocomplete #autoSymbol="matAutocomplete" autoActiveFirstOption>
+      						<mat-option *ngFor="let symbol of symbols" [value]="symbol">
+        						{{ symbol }}
       						</mat-option>
     					</mat-autocomplete> 
 				</mat-form-field>
-				</div>
-				<div>
-				<mat-form-field class="number-operator"> 
-				   <mat-label i18n="@@operator">Operator</mat-label> 
-				   <mat-select [formControlName]="FormFields.NumberOperator" name="NumberOperator" class="operator">
-				      <mat-option *ngFor="let item of numberQueryItems" [value]="item" class="operator">{{item}}</mat-option> 
+				<mat-form-field class="form-field"> 
+				   <mat-label i18n="@@quarter">Quarter</mat-label> 
+				   <mat-select [formControlName]="FormFields.Quarter" name="Quarter" >
+				      <mat-option *ngFor="let item of quarterQueryItems" [value]="item">{{item}}</mat-option> 
 				   </mat-select>
 				</mat-form-field>
-				<mat-form-field class="form-field">
-				<mat-label i18n="@@value">Value</mat-label>  
-				   <input matInput type="text" formControlName="{{FormFields.NumberValue}}" class="number-value">
-				</mat-form-field>
 				</div>
-			</div>
 	</div>
 	<div cdkDropListGroup>
 		<div class="query-container">
