--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.scss
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.scss
@@ -16,6 +16,12 @@
   cursor: default !important;
 }
 
+.symbol-financials-container {
+	display: flex;
+	gap: 5px;
+	margin: 5px 5px 0 0;
+}
+
 .string-operator {
 	width: 70px;
 }
@@ -37,8 +43,7 @@
 }
 
 .form-field {
-	font-size: 12px;
-	width: calc(100% - 70px);	
+	width: 100%;	
 }
 
 .query-container {
