--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -16,7 +16,7 @@
 			</div>
 			<div class="symbol-financials-container">
 				<mat-form-field class="form-field">
-				<mat-label i18n="@@symbol">Symbol</mat-label> 
+				<mat-label i18n="@@createQuerySymbol">Symbol</mat-label> 
 						<input matInput type="text" [matAutocomplete]="autoSymbol" formControlName="{{FormFields.Symbol}}"
 							i18n-placeholder="@@phSymbol" placeholder="symbol">
 						<mat-autocomplete #autoSymbol="matAutocomplete" autoActiveFirstOption>
