--- a/frontend/src/angular/src/app/financial-data/components/query/query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/query/query.component.html
@@ -21,7 +21,7 @@
 				<mat-form-field class="form-field">
 				<mat-label i18n="@@createQueryQueryItemConcept">Concept</mat-label> 
 						<input matInput type="text" [matAutocomplete]="autoConcept" formControlName="{{FormFields.Concept}}"
-							i18n-placeholder placeholder="concept">
+							i18n-placeholder="@@phConcept" placeholder="concept">
 						<mat-autocomplete #autoConcept="matAutocomplete" autoActiveFirstOption>
       						<mat-option *ngFor="let concept of concepts" [value]="concept" 
       						    class="symbol-text">
