feat: first step

--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.scss
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.scss
@@ -5,6 +5,12 @@
   margin: 5px;
 }
 
+.search-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
 .base-query {	
   width: 100%;
   border: solid 1px #ccc !important;
