--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -1,7 +1,10 @@
 <div class="container">
 		<form [formGroup]="queryForm" novalidate>
 	<div>
-		<h2 i18n="@@query">Query</h2>
+		<div class="search-header">
+			<h2 i18n="@@query">Query</h2>
+			<button mat-raised-button color="primary" i18n="@@search">Search</button>
+		</div>
 			<div class="symbol-financials-container">
 				<mat-form-field> 
 				   <mat-label i18n="@@operator">Operator</mat-label> 
