feat: first call

--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -3,7 +3,7 @@
 	<div>
 		<div class="search-header">
 			<h2 i18n="@@query">Query</h2>
-			<button mat-raised-button color="primary" i18n="@@search">Search</button>
+			<button mat-raised-button color="primary" (click)="search()" i18n="@@search">Search</button>
 		</div>
 			<div class="symbol-financials-container">
 				<mat-form-field> 
