--- a/frontend/src/angular/src/app/portfolios/portfolio-detail/components/portfolio/portfolio.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-detail/components/portfolio/portfolio.component.html
@@ -8,7 +8,7 @@
 					color="primary">
 		</mat-progress-spinner>
 	</span>
-	<span *ngIf="reloadData" class="spinner-text" i18n="@@loading">loading...</span>
+	<span *ngIf="reloadData" class="spinner-text" i18n="@@loading"> Loading... </span>
 	<span><button mat-flat-button color="primary" (click)="back()" i18n="@@back">Back</button></span>
 	<span><button mat-flat-button color="primary" (click)="logout()" i18n="@@logout">Logout</button></span>
 </mat-toolbar>
