feat: result table

--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.scss
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.scss
@@ -1,6 +1,6 @@
 .container {
   //background-color: #FF0000;
-  width: calc(100% - 10px);
+  width: calc(50vw - 15px);
   height: calc(100% - 10px);
   margin: 5px;
 }
