--- a/frontend/src/angular/src/app/financial-data/components/query-results/query-results.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/query-results/query-results.component.html
@@ -1,5 +1,44 @@
 <div class="container">
-  <p>query-results works!</p>
+<mat-table [dataSource]="dataSource" class="mytable">
+  <ng-container matColumnDef="concept">
+    <mat-header-cell *matHeaderCellDef i18n="@@queryResultsConcept">Concept</mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.concept}} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="symbol">
+    <mat-header-cell *matHeaderCellDef i18n="@@queryResultsSymbol">Symbol</mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="year">
+    <mat-header-cell *matHeaderCellDef i18n="@@queryResultsYear">Year</mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.year}} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="quarter">
+    <mat-header-cell *matHeaderCellDef i18n="@@queryResultsQuarter">Quarter</mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.quarter}} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="currency">
+    <mat-header-cell *matHeaderCellDef i18n="@@queryResultsCurrency">Currency</mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.currency}} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="value">
+    <mat-header-cell *matHeaderCellDef i18n="@@queryResultsValue">Value</mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.value}} </mat-cell>
+  </ng-container>
+
+ <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+
+<mat-row class="mat-row" *matNoDataRow>
+    <!-- <td class="mat-cell" colspan="4" i18n="@@queryResultsNoMatchingData">No data matching the filter "{{input.value}}"</td> -->
+  </mat-row>
+</mat-table>
+<!-- 
   {{ symbolFinancials | json }}
   {{ financialElements | json }}
+   -->
 </div>
