--- a/frontend/src/angular/src/app/financial-data/components/query-results/query-results.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/query-results/query-results.component.html
@@ -2,7 +2,7 @@
 <mat-table [dataSource]="dataSource" class="mytable">
   <ng-container matColumnDef="concept">
     <mat-header-cell *matHeaderCellDef i18n="@@queryResultsConcept">Concept</mat-header-cell>
-    <mat-cell *matCellDef="let element"> {{element.concept}} </mat-cell>
+    <mat-cell *matCellDef="let element" matTooltip="{{element.concept}}"> {{element.concept}} </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="symbol">
