--- a/frontend/src/angular/src/app/financial-data/components/query-results/query-results.component.scss
+++ b/frontend/src/angular/src/app/financial-data/components/query-results/query-results.component.scss
@@ -9,4 +9,21 @@
 
 .mat-column-concept {
 	overflow: hidden;
+	flex: 1 1 auto;	
+}
+
+.mat-column-value {
+	min-width: 50px;
+	flex: 1 0 auto;
+	justify-content: right;
+}
+
+.mat-column-symbol {
+	min-width: 100px;
+	flex: 0 0 auto;
+}
+
+.mat-column-year, .mat-column-quarter, .mat-column-currency {	
+	min-width: 50px;
+	flex: 0 0 auto;
 }
